--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -1,8 +1,9 @@
 
 
-<ion-content text-center>
- <img src="assets/imgs/logo.jpg" height="60px" style="margin-top: 25vh;">
- <div class="enterBtn" transparent> 
+<ion-content text-center >
+ <!-- <img src="assets/imgs/logo.jpg" height="60px" style="margin-top: 25vh;"> -->
+<ion-title height="60px" style="margin-top: 25vh; font-size: 50px !important;">Kusina Filipina</ion-title>
+ <div class="enterBtn"> 
  	<button ion-button outline medium color="dark" (click)="enterWebsite();">Enter</button>
 
 </div>
