--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,11 +1,11 @@
 <ion-header>
-  <ion-navbar color="danger">
-   <button ion-button menuToggle>
-    <ion-icon name="menu"></ion-icon>
-  </button>
-  <!-- <img src="assets/imgs/logo.jpg" height="40px;"> -->
-  <ion-title>Kusina Filipina</ion-title>
-<!-- 
+  <ion-navbar color="white">
+    <button ion-button menuToggle>
+      <ion-icon name="menu" style="color: red !important;"></ion-icon>
+    </button>
+    <!-- <img src="assets/imgs/logo.jpg" height="40px;"> -->
+    <!-- <ion-title style="color: red !important;">Kusina Filipina</ion-title> -->
+    <!-- 
   <ion-buttons end>
     <button ion-button icon-only>
       <ion-icon name="logo-facebook"></ion-icon>
@@ -15,8 +15,11 @@
     </button>
   </ion-buttons> -->
 
-</ion-navbar>
+  </ion-navbar>
 </ion-header>
+
+
+<ion-content>
 <ion-content>
 
   <ion-grid no-padding text-center>
