--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -1,8 +1,10 @@
 
 
 <ion-content text-center >
- <!-- <img src="assets/imgs/logo.jpg" height="60px" style="margin-top: 25vh;"> -->
-<ion-title height="60px" style="margin-top: 25vh; font-size: 50px !important;">Kusina Filipina</ion-title>
+ <img src="assets/imgs/logo.jpg" height="60px" style="margin-top: 25vh;">
+<h2 class="title titleText" > <span style="color: red !important; font-weight: bold;">K</span>usina <span
+		style="color: red !important; font-weight: bold;">F</span>ilipina</h2>
+<!-- <ion-title height="60px" style="margin-top: 25vh; font-size: 50px !important;">Kusina Filipina</ion-title> -->
  <div class="enterBtn"> 
  	<button ion-button outline medium color="dark" (click)="enterWebsite();">Enter</button>
 
