--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -1,30 +1,21 @@
-<!--
-  Generated template for the SettingsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
- <ion-navbar color="white">
-   <button ion-button menuToggle>
-			<ion-icon name="menu"></ion-icon>
+	<ion-navbar color="white">
+		<button ion-button menuToggle>
+			<ion-icon name="menu" style="color: red !important;"></ion-icon>
 		</button>
 		<img src="assets/imgs/logo.jpg" height="40px;">
+		<!-- <ion-title style="color: red !important;">Kusina Filipina</ion-title> -->
+		<!-- 
+  <ion-buttons end>
+    <button ion-button icon-only>
+      <ion-icon name="logo-facebook"></ion-icon>
+    </button>
+    <button ion-button icon-only>
+      <ion-icon name="logo-instagram"></ion-icon>
+    </button>
+  </ion-buttons> -->
 
-		<ion-buttons end>
-			<button ion-button icon-only>
-				<ion-icon name="logo-facebook"></ion-icon>
-			</button>
-			<button ion-button icon-only>
-				<ion-icon name="logo-instagram"></ion-icon>
-			</button>
-		</ion-buttons>
-  </ion-navbar>
-
-</ion-header>
-
-
+<!-- 
 <ion-content>
 <ion-item>
 	<ion-icon name="contact" item-start></ion-icon>
@@ -51,4 +42,4 @@
 	Push Notifications
 </ion-item>
 
-</ion-content>
+</ion-content> -->
