--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -15,31 +15,9 @@
     </button>
   </ion-buttons> -->
 
-<!-- 
-<ion-content>
-<ion-item>
-	<ion-icon name="contact" item-start></ion-icon>
-	Accounts
-</ion-item>
-<ion-item>
-	<ion-icon name="lock" item-start></ion-icon>
-	Password
-</ion-item>
-<ion-item>
-	<ion-icon name="eye" item-start></ion-icon>
-	Privacy
-</ion-item>
-<ion-item>
-	<ion-icon name="card" item-start></ion-icon>
-	Payments
-</ion-item>
-<ion-item>
-	<ion-icon name="list" item-start></ion-icon>
-	Story Control
-</ion-item>
-<ion-item>
-	<ion-icon name="notifications" item-start></ion-icon>
-	Push Notifications
-</ion-item>
+	</ion-navbar>
+</ion-header>
 
-</ion-content> -->
+<ion-content>
+	<h2 text-center style="margin-top: 25vh">Comming Soon...</h2>
+</ion-content>
