--- a/src/pages/outside/outside.html
+++ b/src/pages/outside/outside.html
@@ -19,5 +19,21 @@
 </ion-header>
 
 <ion-content>
-  <h2 text-center style="margin-top: 25vh">Coming Soon...</h2>
+
+  <ion-grid no-padding text-center>
+    <ion-row no-padding>
+
+      <ion-col no-margin no-padding col-6 (click)="showPortfolio(l);" *ngFor="let l of list" class="image-holder">
+
+        <img src="assets/imgs/{{l.image}}" class="show">
+
+        <div class="subtitle">
+          <h6>{{l.name}}</h6>
+        </div>
+      </ion-col>
+
+    </ion-row>
+
+  </ion-grid>
+
 </ion-content>
