--- a/src/pages/notifications/notifications.html
+++ b/src/pages/notifications/notifications.html
@@ -18,6 +18,21 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content>
-  <h2 text-center style="margin-top: 25vh">Comming Soon...</h2>
+<ion-content padding>
+
+  <!-- <h2 class="infoHead"></h2> -->
+  <h1 class="infoHead">
+    <ion-icon color="danger" name="navigate"></ion-icon>
+  </h1>
+  <!-- <h2 class="infoHead">Inquire now for your needs..</h2> -->
+  <hr>
+  <div class="parg">
+    <h6>Want to know our location? <br> You can find us here:</h6>
+  <div class="mapContainer">
+    <div #map id="map"></div>
+  </div>
+  <h6 style="font-size: 1.4rem;">4157 Eagle Rock Blvd
+  Ste 1
+  Los Angeles, CA 90065</h6>
+  </div>
 </ion-content>
