--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -19,9 +19,9 @@
 </ion-header>
 
 <ion-content padding>
-	<div class="swipercontainer" (swipe)="swipeEvent($event)">
+	
 		<!-- <h2 class="infoHead"></h2> -->
-		<h1 class="infoHead"><ion-icon name="ios-help-circle-outline"></ion-icon></h1>
+		<h1 class="infoHead"><ion-icon name="ios-help-circle-outline" color="danger"></ion-icon></h1>
 		<!-- <h2 class="infoHead">Inquire now for your needs..</h2> -->
 		<hr>
 		<div class="parg">
@@ -38,6 +38,5 @@
 				insight into action. Give yourself the time to reflect on the questions, and let that lead
 				you where you need to go. In short, trust the process. -->
 		</div>
-	</div>
 </ion-content>
 
