--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
-
+  <script src="https://maps.googleapis.com/maps/api/js?key=" ></script>
   <!-- un-comment this code to enable service worker
   <script>
     if ('serviceWorker' in navigator) {
