--- a/src/pages/food/food.html
+++ b/src/pages/food/food.html
@@ -19,7 +19,10 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-title class="titl infoHead"><span style="color: rgb(245, 61, 61) !important; font-weight: bold;">K</span>usina
+    <span style="color: rgb(245, 61, 61) !important; font-weight: bold;">F</span>ilipina <span
+      style="color: rgb(245, 61, 61) !important; font-weight: bold;">F</span>oods</ion-title>
+  <hr>
   <ion-grid no-padding text-center>
     <ion-row no-padding>
 
