--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -1,7 +1,7 @@
 <ion-header>
 	<ion-navbar color="white">
 		<button ion-button menuToggle>
-			<ion-icon name="menu" style="color: red !important;"></ion-icon>
+			<ion-icon name="menu" ></ion-icon>
 		</button>
 		<img src="assets/imgs/logo.jpg" height="40px;">
 		<!-- <ion-title style="color: red !important;">Kusina Filipina</ion-title> -->
