--- a/src/pages/portfolio/portfolio.html
+++ b/src/pages/portfolio/portfolio.html
@@ -25,8 +25,10 @@
 			<img src="assets/imgs/{{currentImage.image}}">
 			<h2 style="color:rgb(0, 0, 0);">{{currentImage.name}}</h2>
 			<hr>
+			<h6 style="color: rgb(0, 0, 0); padding: 2px;">Price: <span style="color: rgb(245, 61, 61)">{{ currentImage.price }}</span> </h6>
 			<ion-row style="margin-bottom: 20px">
-				<h6 style="color: rgb(0, 0, 0); padding: 5px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore </h6>
+				<h6 style="color: rgb(0, 0, 0); margin-top: 0px !important;">{{ currentImage.description }}</h6>
+				
 				<!-- <ion-col>
 					<button ion-button icon-left clear small color="light">
 						<ion-icon name="thumbs-up"></ion-icon>
