--- a/src/pages/food/food.html
+++ b/src/pages/food/food.html
@@ -18,7 +18,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content *ngIf="checkApp">
   <ion-title class="titl infoHead"><span style="color: rgb(245, 61, 61) !important; font-weight: bold;">K</span>usina
     <span style="color: rgb(245, 61, 61) !important; font-weight: bold;">F</span>ilipina <span
       style="color: rgb(245, 61, 61) !important; font-weight: bold;">F</span>oods</ion-title>
@@ -27,6 +27,29 @@
     <ion-row no-padding>
 
       <ion-col no-margin no-padding col-6 (click)="showPortfolio(l);" *ngFor="let l of list" class="image-holder">
+
+        <img src="assets/imgs/{{l.image}}" class="show">
+
+        <div class="subtitle">
+          <h6>{{l.name}}</h6>
+        </div>
+      </ion-col>
+
+    </ion-row>
+
+  </ion-grid>
+
+</ion-content>
+
+<ion-content *ngIf="!checkApp">
+  <ion-title class="titl infoHead"><span style="color: rgb(245, 61, 61) !important; font-weight: bold;">K</span>usina
+    <span style="color: rgb(245, 61, 61) !important; font-weight: bold;">F</span>ilipina <span
+      style="color: rgb(245, 61, 61) !important; font-weight: bold;">F</span>oods</ion-title>
+  <hr>
+  <ion-grid class="padding-all" text-center>
+    <ion-row >
+
+      <ion-col no-margin  col-2 (click)="showPortfolio(l);" *ngFor="let l of list" class="desk-image-holder">
 
         <img src="assets/imgs/{{l.image}}" class="show">
 
