--- a/src/pages/food/food.html
+++ b/src/pages/food/food.html
@@ -61,5 +61,7 @@
     </ion-row>
 
   </ion-grid>
-
+  <ion-toolbar *ngIf="!checkApp" class="footer-text" color="semiDark">
+    <h6>© Kusina Filipina Copyright</h6>
+  </ion-toolbar>
 </ion-content>
