--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -52,5 +52,7 @@
 		</div>
 		
 	</div>
-	
+	<ion-toolbar *ngIf="!checkApp" class="footer-text" color="semiDark">
+		<h6>© Kusina Filipina Copyright</h6>
+	</ion-toolbar>
 </ion-content>
