--- a/src/pages/gallery-tabs/gallery-tabs.html
+++ b/src/pages/gallery-tabs/gallery-tabs.html
@@ -54,7 +54,9 @@
     <h4 class="titl infoHead desk-subtitle">We offer an exceptional dining experience. Curious about <span class="emph" >what we serve?</span> and <span class="emph">What the Restaurant looks like?</span> Well just click one of the items above to look at it.
     </h4>
     <hr style="width: 10% !important">
+</ion-content>
+<ion-footer>
     <ion-toolbar *ngIf="!checkApp" class="footer-text" color="semiDark">
         <h6>© Kusina Filipina Copyright</h6>
     </ion-toolbar>
-</ion-content>
+</ion-footer>
