--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -52,7 +52,9 @@
 		</div>
 		
 	</div>
+</ion-content>
+<ion-footer>
 	<ion-toolbar *ngIf="!checkApp" class="footer-text" color="semiDark">
 		<h6>© Kusina Filipina Copyright</h6>
 	</ion-toolbar>
-</ion-content>
+</ion-footer>
