--- a/src/pages/outside/outside.html
+++ b/src/pages/outside/outside.html
@@ -18,10 +18,10 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content>
+<ion-content *ngIf="checkApp">
   <ion-title class="titl infoHead"><span style="color: rgb(245, 61, 61) !important; font-weight: bold;">K</span>usina
     <span style="color: rgb(245, 61, 61) !important; font-weight: bold;">F</span>ilipina <span
-      style="color: rgb(245, 61, 61) !important; font-weight: bold;">O</span>utside</ion-title>
+      style="color: rgb(245, 61, 61) !important; font-weight: bold;">F</span>oods</ion-title>
   <hr>
   <ion-grid no-padding text-center>
     <ion-row no-padding>
@@ -40,3 +40,30 @@
   </ion-grid>
 
 </ion-content>
+
+<ion-content *ngIf="!checkApp">
+  <ion-title class="titl infoHead"><span style="color: rgb(245, 61, 61) !important; font-weight: bold;">K</span>usina
+    <span style="color: rgb(245, 61, 61) !important; font-weight: bold;">F</span>ilipina <span
+      style="color: rgb(245, 61, 61) !important; font-weight: bold;">O</span>utside</ion-title>
+  <hr>
+  <ion-grid class="padding-all" text-center>
+    <ion-row>
+
+      <ion-col no-margin col-2 (click)="showPortfolio(l);" *ngFor="let l of list" class="desk-image-holder">
+
+        <img src="assets/imgs/{{l.image}}" class="show">
+
+        <div class="subtitle">
+          <h6>{{l.name}}</h6>
+        </div>
+      </ion-col>
+
+    </ion-row>
+
+  </ion-grid>
+</ion-content>
+<ion-footer>
+  <ion-toolbar *ngIf="!checkApp" class="footer-text" color="semiDark">
+    <h6>© Kusina Filipina Copyright</h6>
+  </ion-toolbar>
+</ion-footer>
