--- a/src/pages/catering/catering.html
+++ b/src/pages/catering/catering.html
@@ -1,15 +1,66 @@
-<!--
-  Generated template for the CateringPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-  <ion-navbar>
-    <ion-title>catering</ion-title>
+  <ion-navbar color="white">
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
+    <img src="assets/imgs/logo.jpg" height="40px;">
+    <!-- <ion-title style="color: red !important;">Kusina Filipina</ion-title> -->
+    <!-- 
+  <ion-buttons end>
+    <button ion-button icon-only>
+      <ion-icon name="logo-facebook"></ion-icon>
+    </button>
+    <button ion-button icon-only>
+      <ion-icon name="logo-instagram"></ion-icon>
+    </button>
+  </ion-buttons> -->
+
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content *ngIf="checkApp">
+  <ion-title class="titl infoHead"><span style="color: rgb(245, 61, 61) !important; font-weight: bold;">K</span>usina
+    <span style="color: rgb(245, 61, 61) !important; font-weight: bold;">F</span>ilipina <span
+      style="color: rgb(245, 61, 61) !important; font-weight: bold;">D</span>rinks</ion-title>
+  <hr>
+  <ion-grid no-padding text-center>
+    <ion-row no-padding>
+
+      <ion-col no-margin no-padding col-6 (click)="showPortfolio(l);" *ngFor="let l of list" class="image-holder">
+
+        <img src="assets/imgs/{{l.image}}" class="show">
+
+        <div class="subtitle">
+          <h6>{{l.name}}</h6>
+        </div>
+      </ion-col>
+
+    </ion-row>
+
+  </ion-grid>
 
 </ion-content>
+
+<ion-content *ngIf="!checkApp">
+  <ion-title class="titl infoHead"><span style="color: rgb(245, 61, 61) !important; font-weight: bold;">K</span>usina
+    <span style="color: rgb(245, 61, 61) !important; font-weight: bold;">F</span>ilipina <span
+      style="color: rgb(245, 61, 61) !important; font-weight: bold;">C</span>atering and <span style="color: rgb(245, 61, 61) !important; font-weight: bold;">E</span>vents
+    </ion-title>
+  <hr>
+  <ion-grid class="padding-all" text-center>
+    <ion-row>
+
+      <ion-col no-margin col-12 class="desk-image-holder">
+
+       <h2 style="text-align: center">COMING SOON!</h2>
+      </ion-col>
+
+    </ion-row>
+
+  </ion-grid>
+</ion-content>
+<ion-footer>
+  <ion-toolbar *ngIf="!checkApp" class="footer-text" color="semiDark">
+    <h6>© Kusina Filipina Copyright</h6>
+  </ion-toolbar>
+</ion-footer>
