--- a/src/pages/notifications/notifications.html
+++ b/src/pages/notifications/notifications.html
@@ -23,7 +23,7 @@
      
   </ion-row>
   <ion-row no-padding>
-			<div class="contentSections">
+			<div class="contentSections"> 
 				<h2 class="title curvyFont welcomeText goldenText" style="text-align: left !important;">About Us</h2>
         <h2 class="mainTexts headFont">DISCOVER OUR STORY</h2>
         <h2 class="lestMainTexts">Welcome to Kusina Filipina, a Modern Restaurant with focus on Premium Food Tastes</h2>
@@ -150,8 +150,8 @@
 <ion-footer transparent *ngIf="checkApp">
 		<ion-toolbar class="footer-text mobile-footer" color="brownLight" >
 			<h5><span class="iconFont">
-					<ion-icon color="goldenBrown" name="call"></ion-icon>
-				</span><span style="margin-left: 0px !important">For Inquiries: (323) 229-0228 </span></h5>
+					<ion-icon color="goldenBrown" name="time"></ion-icon>
+				</span><span style="margin-left: 0px !important">10:00am - 10:00pm</span></h5>
 			<h5><span class="iconFont">
 					<ion-icon color="goldenBrown" name="contacts"></ion-icon>
 				</span><span style="margin-left: 0px !important">Kusina Filipina 2019</span></h5>
