--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -63,6 +63,30 @@
 		</div>
 	
 	</ion-row>
+	<img src="assets/imgs/logoName.png" height="300px;" class="imageConte">
+
+	<ion-row no-padding>
+		<div class="contentSections lastSect">
+			<h2 class="mainTexts headFont">RESTAURANT</h2>
+			<hr>
+			<div class="subTexts">
+				<p>Opening Hours: 10:00am - 10:00pm.</p>
+				<p>Booking Call: (323) 229-0228</p>
+			</div>
+		</div>
+	</ion-row>
+	<ion-row no-padding>
+		<div class="contentSections lastSect" >
+			<h2 class="mainTexts headFont">EVENT CATERING</h2>
+			<hr>
+			<div class="subTexts">
+				<p><span>Monday - Thursday:</span> 10:00am - 10:00pm</p>
+				<p><span>Friday - Saturday:</span> 10:00am - 10:00pm</p>
+				<p><span>Sunday:</span> 10:00am - 04:00pm.</p>
+				<p><span>Booking Time:</span> 24/7 Hours</p>
+			</div>
+		</div>
+	</ion-row>
 	<ion-row no-padding>
 		<div class="contentSections footerSect" padding>
 			<h2 class="mainTexts headFont">SUBSCRIBE NOW</h2>
@@ -112,8 +136,8 @@
 <ion-footer transparent *ngIf="checkApp">
 	<ion-toolbar class="footer-text mobile-footer" color="brownLight">
 		<h5><span class="iconFont">
-				<ion-icon color="goldenBrown" name="call"></ion-icon>
-			</span><span style="margin-left: 0px !important">For Inquiries: (323) 229-0228 </span></h5>
+				<ion-icon color="goldenBrown" name="time"></ion-icon>
+			</span><span style="margin-left: 0px !important">10:00am - 10:00pm</span></h5>
 		<h5><span class="iconFont">
 				<ion-icon color="goldenBrown" name="contacts"></ion-icon>
 			</span><span style="margin-left: 0px !important">Kusina Filipina 2019</span></h5>
