Added icons to Contact Us

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -59,7 +59,7 @@
 	<div *ngIf="!checkApp" >
 		<div style="flex-wrap: inherit; width: 100%;padding:0" class="cover2" >
 			<div class="welcome">
-				<h2 class="title contact"> <span  style="color: #ffffff !important;font-size:5vw !important;margin-top: 20vw;">Contact Us</span></h2>
+				<h2 class="title contact"> <span  style="color: #ffffff !important;font-size:4vw !important;margin-top: 20vw;">Contact Us</span></h2>
 			</div>
 		</div>
 		
@@ -90,25 +90,43 @@
 			</ion-row>
 		</div>
 	
-	<div class="first-section" style="padding-top: 0px !important">
+	<div class="first-section" style="padding-top: 0px !important;padding-bottom: 0px !important">
 			<ion-row align-items-center="" class="row">
 				<ion-col class="col" col-12="" col-lg-6="" class="text-menu">
 					<div class="container contactUs" style="text-align: left">
 						<h2 class="headFont;">CONTACT INFO</h2>
 						<br>
-						<p style="font-size: 1.7rem;font-weight: bold">Address</p>
-						<p style="font-size: 1.5rem;">4157 Eagle Rock Blvd
+						<ion-row>
+						<ion-col col-2="" style="margin:0;width:10px;margin-left:10px;">
+							<ion-icon class="icon" color="goldenBrown" name="map"></ion-icon>
+						</ion-col>
+						<ion-col>
+							<p style="font-size: 1.7rem;font-weight: bold;margin-bottom: 0px">Address</p>
+							<p style="font-size: 1.5rem;margin-top: 7px">4157 Eagle Rock Blvd
 							Ste 1
 							Los Angeles, CA 90065</p>
+						</ion-col>
+					</ion-row>
 
-						<br>
-						<p style="font-size: 1.7rem;font-weight: bold">Phone Number</p>
-						<p style="font-size: 1.5rem;">(323) 229-0228</p>
+					<ion-row>
+						<ion-col col-2="" style="margin:0;width:10px;margin-left:10px;">
+							<ion-icon class="icon" color="goldenBrown" name="call"></ion-icon>
+						</ion-col>
+						<ion-col>
+							<p style="font-size: 1.7rem;font-weight: bold;margin-bottom: 0px">Phone Number</p>
+							<p style="font-size: 1.5rem;margin-top: 7px">(323) 229-0228</p>
+						</ion-col>
+					</ion-row>
 
-						<br>
-						<p style="font-size: 1.7rem;font-weight: bold">Email Address</p>
-						<p style="font-size: 1.5rem;">infoname@gmail.com</p>
-
+					<ion-row>
+						<ion-col col-2="" style="margin:0;width:10px;margin-left:10px;">
+							<ion-icon class="icon" color="goldenBrown" name="mail"></ion-icon>
+						</ion-col>
+						<ion-col>
+							<p style="font-size: 1.7rem;font-weight: bold;margin-bottom: 0px">Email Address</p>
+							<p style="font-size: 1.5rem;margin-top: 7px">infoname@gmail.com</p>
+						</ion-col>
+					</ion-row>
 
 					</div>
 				</ion-col>
@@ -121,23 +139,23 @@
 			</ion-row>
 		</div>
 
-		<div class="first-section" style="padding-top: 0px !important">
+		<div class="first-section" style="padding-top: 0px !important;margin-top: -10px !important">
 			<ion-row align-items-center="" class="row">
 				<ion-col class="col" col-12="" col-lg-6="" class="text-menu">
 					<div class="container contactUs" style="text-align: left">
-						<h2 class="headFont;">RESTAURANT</h2>
+						<h2 class="headFont;" style="margin-bottom: 0px;">RESTAURANT</h2>
 						<br>
-						<p style="font-size: 1.5rem;">Opening Hours: 8:00 - 23:30</p>
-						<p style="font-size: 1.5rem;">Booking Call: +88045221210</p>
+						<p style="font-size: 1.5rem;margin-left: 15px;margin-top: 0px;">Opening Hours: 8:00 - 23:30</p>
+						<p style="font-size: 1.5rem;margin-left: 15px">Booking Call: +88045221210</p>
 
 					</div>
 				</ion-col>
 				<ion-col class="col" col-12="" col-lg-6="" text-center="">
 					<div class="container contactUs" style="text-align: left">
-						<h2 class="headFont;">EVENT CATERING</h2>
+						<h2 class="headFont;" style="margin-bottom: 0px;">EVENT CATERING</h2>
 						<br>
-						<p style="font-size: 1.5rem;">Opening Hours: 8:00 - 23:30</p>
-						<p style="font-size: 1.5rem;">Booking Call: +88045221210</p>
+						<p style="font-size: 1.5rem;margin-left: 15px;margin-top: 0px;">Business Hours: 8:00 - 23:30</p>
+						<p style="font-size: 1.5rem;margin-left: 15px">Booking Call: +88045221210</p>
 
 					</div>
 					
