--- a/src/pages/notifications/notifications.html
+++ b/src/pages/notifications/notifications.html
@@ -151,7 +151,7 @@
 		<ion-toolbar class="footer-text mobile-footer" color="brownLight" >
 			<h5><span class="iconFont">
 					<ion-icon color="goldenBrown" name="time"></ion-icon>
-				</span><span style="margin-left: 0px !important">10:00am - 10:00pm</span></h5>
+				</span><span style="margin-left: 0px !important">{{ timeSched }}</span></h5>
 			<h5><span class="iconFont">
 					<ion-icon color="goldenBrown" name="contacts"></ion-icon>
 				</span><span style="margin-left: 0px !important">Kusina Filipina 2019</span></h5>
