--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -88,7 +88,7 @@
 		</div>
 	</ion-row>
 	<ion-row no-padding>
-		<div class="contentSections footerSect" padding>
+		<div class="contentSections footerSect contentPadding" style="padding: 100px 10px !important;">
 			<h2 class="mainTexts headFont">SUBSCRIBE NOW</h2>
 			<hr>
 			<div class="subTexts">
@@ -137,7 +137,7 @@
 	<ion-toolbar class="footer-text mobile-footer" color="brownLight">
 		<h5><span class="iconFont">
 				<ion-icon color="goldenBrown" name="time"></ion-icon>
-			</span><span style="margin-left: 0px !important">10:00am - 10:00pm</span></h5>
+				</span><span style="margin-left: 0px !important">{{ timeSched }}</span></h5>
 		<h5><span class="iconFont">
 				<ion-icon color="goldenBrown" name="contacts"></ion-icon>
 			</span><span style="margin-left: 0px !important">Kusina Filipina 2019</span></h5>
