Auto stash before merge of "master" and "origin/master"

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -162,11 +162,30 @@
 				</ion-col>
 			</ion-row>
 		</div>
+
+		<div class="first-section footer" style="padding-top: 0px !important;margin-top: -10px !important">
+			<ion-row align-items-center="" class="row">
+				<ion-col class="col" col-12="" col-lg-6="" class="text-menu">
+					<div class="container contactUs" style="text-align: left">
+						<h2 class="headFont;" style="margin-bottom: 0px;">RESTAURANT</h2>
+						<br>
+						<p style="font-size: 1.5rem;margin-left: 15px;margin-top: 0px;">Opening Hours: 8:00 - 23:30</p>
+						<p style="font-size: 1.5rem;margin-left: 15px">Booking Call: +88045221210</p>
+
+					</div>
+				</ion-col>
+				<ion-col class="col" col-12="" col-lg-6="" text-center="">
+					<div class="container contactUs" style="text-align: left">
+						<h2 class="headFont;" style="margin-bottom: 0px;">EVENT CATERING</h2>
+						<br>
+						<p style="font-size: 1.5rem;margin-left: 15px;margin-top: 0px;">Business Hours: 8:00 - 23:30</p>
+						<p style="font-size: 1.5rem;margin-left: 15px">Booking Call: +88045221210</p>
+
+					</div>
+					
+				</ion-col>
+			</ion-row>
+		</div>
 		
 	</div>
 </ion-content>
-<ion-footer>
-	<ion-toolbar *ngIf="!checkApp" class="footer-text" color="semiDark">
-		<h6>© Kusina Filipina Copyright</h6>
-	</ion-toolbar>
-</ion-footer>
